# iqstocker-cursor2v

./: .gitignore  AGENT_PLAN.md  DEPLOYMENT.md  Dockerfile.admin  Dockerfile.bot  Dockerfile.worker  PROJECT_ANALYSIS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TRIBUTE_SETUP_GUIDE.md  docker-compose.yml  downloads(6).csv  nixpacks.toml  pyproject.toml  railway.json  scaffold.sh  tid_v2.md  Стоки 2(ТЕМЫ ИТОГ).csv
.cursor/rules/: README.md  api-endpoints.mdc  business-rules.mdc  code-style.mdc  common-patterns.mdc  database-schema.mdc  deployment.mdc  project-architecture.mdc  telegram-handlers.mdc  testing-guide.mdc
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: CLOUD_SETUP.md  CLOUD_SETUP_FINAL.md  FIX_ALEMBIC.md  FIX_DATABASE_CONNECTION.md  FIX_DNS_ISSUE.md  SUMMARY.md  WINDOWS_SERVER_SETUP.md
scripts/: apply_migrations_supabase.py  check_cloud_setup.py  check_env.py  fix_env_file.ps1  init_db.py  load_all_themes_supabase.py  load_themes.py  load_themes_batch.py  load_themes_supabase.py  load_themes_supabase_mcp.py  modify_for_sqlite.py  monitor_bot.py  monitor_bot_live.py  quick_setup_cloud.ps1  run_bot.py  setup_cloud_complete.py  setup_cloud_env.py  setup_supabase.py  setup_windows_server.ps1  test_db_connection.py  test_db_connection_simple.py  test_db_simple.py  watch_bot.ps1
src/admin/: auth.py  main.py  models.py
src/api/: health.py  main.py  webhooks.py
src/bot/: main.py
src/config/: logging.py  settings.py
src/core/: exceptions.py
src/database/: connection.py  models.py
src/workers/: main.py
tests/: conftest.py
(+48 files in other folders)
