[tool.poetry]
name = "iqstocker-v2"
version = "2.0.0"
description = "Adobe Stock analytics bot - Telegram bot for stock photographers"
authors = ["IQStocker Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
arq = "^0.26.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
structlog = "^24.1.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.9.0"
pytest = "^8.1.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.poetry.scripts]
bot = "src.bot.main:main"
admin = "src.admin.main:app"
worker = "src.workers.main:WorkerSettings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
